<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">demointership</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="login_tv_label">Sign in with:</string>
	<string name="login_tv_username">Username:</string>
	<string name="login_tv_password">Password:</string>
	<string name="login_bt_submit">Submit</string>
	<string name="login_bt_forgotPassword">Forgot Password</string>
	<string name="login_bt_CreateNewAccount">Create A New Account</string>
</resources>
